--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -121,6 +121,13 @@
   padding-top: 6px;
 }
 
+.profileName-user {
+  color: white;
+  display: flex;
+  align-items: center;
+  font-size: 16px !important;
+}
+
 @media (max-width: 1320px) {
   .navbar .menu-icon {
     display: block;
@@ -181,6 +188,7 @@
   color: white;
   display: flex;
   align-items: center;
+  font-size: 16px !important;
 }
 .login-success .dot-login {
   color: white;
