--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,97 +1,350 @@
+:root {
+  --boxShadow: 0px 19px 60px rgb(0 0 0 / 8%);
+  --blueCard: #ddf8fe;
+}
 .home {
   margin-top: 56px;
-  text-align: center;
+  background-color: #262838;
+  color: #fff;
 
-  main {
-    section {
-      height: 100vh;
-      background-color: #262838;
-      padding-top: 3vh;
+  &_intro {
+    display: flex;
+    height: 100vh;
+    background-color: #262838;
+    padding-left: 4rem;
+    padding-right: 4rem;
+
+    &_left {
+      width: 50%;
+      padding: 20px;
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
-      align-items: center;
-      padding-left: 3rem;
-      padding-right: 3rem;
-      padding-bottom: 3rem;
+      justify-content: center;
+      position: relative;
+
       h2 {
-        font-size: 2em;
+        font-size: 2rem;
         margin-bottom: 1rem;
-        color: #fff;
-      }
-
-      .home_content {
-        display: flex;
-        width: 100%;
-
-        div {
-          width: 50%;
-          padding: 0 20px;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-        }
       }
 
       p {
-        font-size: 1.2em;
+        text-align: justify;
       }
 
-      ul {
-        list-style: none;
-        padding: 0;
+      &_button {
+        margin-top: 1rem;
 
-        li {
-          font-size: 1.2em;
-          margin-bottom: 5px;
+        button {
+          color: #fff;
+          border-color: #fff;
         }
       }
+    }
+    &_right {
+      width: 50%;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        width: 100%;
+      }
+    }
+    @media screen and (max-width: 1000px) {
+      flex-direction: column;
+      padding: 2rem;
+      justify-content: space-evenly;
+
+      &_left {
+        width: 100%;
+        padding: 0;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+      }
+
+      &_right {
+        width: 100%;
+        padding: 0;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+      }
+    }
+  }
+
+  &_services {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #262838;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    align-items: center;
+    justify-content: space-evenly;
+
+    &_title {
+      h2 {
+        font-size: 2rem;
+        text-align: center;
+      }
+    }
+
+    &_experience {
+      display: flex;
+      width: 100%;
+      justify-content: space-evenly;
+      &_achievement {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: #000;
+        &_circle {
+          width: 6rem;
+          height: 6rem;
+          background: white;
+          border-radius: 100%;
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 1.5rem;
+          font-weight: bold;
+          margin-bottom: 2rem;
+
+          ::before {
+            border-radius: 100%;
+            content: "";
+            background-image: linear-gradient(
+              to bottom,
+              #87e6fb 0%,
+              #ffc05c 100%
+            );
+            top: -8px;
+            left: -8px;
+            bottom: -8px;
+            right: -8px;
+            position: absolute;
+            z-index: -1;
+            box-shadow: var(--boxShadow);
+          }
+        }
+
+        span:nth-of-type(1) {
+          color: #fff;
+          font-weight: 500;
+          font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        }
+      }
+    }
+  }
+
+  &_feature {
+    display: flex;
+    flex-direction: column;
+    min-width: 100vh;
+    height: fit-content;
+    background-color: #262838;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    align-items: center;
+    justify-content: space-evenly;
+    &_title {
+      font-size: 2rem;
+      text-align: center;
+    }
+    &_1,
+    &_3 {
+      display: flex;
+      flex-direction: row;
+      &_left {
+        width: 50%;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+
+        h3 {
+          font-size: 1.5rem;
+          margin-bottom: 1rem;
+        }
+
+        p {
+          text-align: justify;
+        }
+      }
+      &_right {
+        width: 50%;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          width: 100%;
+        }
+      }
+    }
+    &_2 {
+      display: flex;
+      flex-direction: row;
+      &_left {
+        width: 50%;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          width: 100%;
+        }
+      }
+      &_right {
+        width: 50%;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+
+        h3 {
+          font-size: 1.5rem;
+          margin-bottom: 1rem;
+        }
+
+        p {
+          text-align: justify;
+        }
+      }
+    }
+  }
+
+  &_feedback {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #262838;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    align-items: center;
+    justify-content: space-evenly;
+
+    &_slide_testimonial {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      padding: 2rem;
+      width: 30rem;
+      height: 30rem;
+      background: rgba(255, 255, 255, 0.26);
+      border-radius: 20px;
+
+      img {
+        width: 6rem;
+        height: 6rem;
+        border-radius: 100%;
+      }
+
+      span {
+        color: #ccc;
+      }
+    }
+
+    .swiper {
+      width: 100%;
+      height: 70%;
+    }
+
+    .swiper-slide {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .swiper-pagination-bullet-active {
+      background: orange;
+    }
+  }
+
+  &_contact {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    background-color: #262838;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    align-items: center;
+    justify-content: space-evenly;
+
+    &_left {
+      h2 {
+        font-size: 2rem;
+        text-align: center;
+      }
+    }
+
+    &_right {
+      display: flex;
+      justify-content: center;
+      position: relative;
+      flex: 1;
 
       form {
         display: flex;
         flex-direction: column;
+        gap: 2rem;
         align-items: center;
-        max-width: 600px;
-        width: 500px;
-        // margin: 0 auto;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-        label {
-          font-size: 1.2em;
-          margin: 10px 0 5px;
-          align-self: flex-start;
-        }
-
-        input,
-        textarea {
-          width: 100%;
-          padding: 10px;
-          margin-bottom: 10px;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-          font-size: 1em;
-        }
-
-        button {
-          padding: 10px 20px;
-          font-size: 1.2em;
-          color: #fff;
-          background-color: #333;
-          border: none;
-          border-radius: 5px;
-          cursor: pointer;
-          transition: background-color 0.3s ease;
-
-          &:hover {
-            background-color: #555;
-          }
-        }
+        width: 50%;
       }
+
+      .user {
+        width: 20rem;
+        height: 2rem;
+        padding: 0.3em;
+        outline: none;
+        border: 2px solid var(--orange);
+        border-radius: 8px;
+        font-size: 16px;
+      }
+
+      input {
+        width: 100%;
+        padding: 4px;
+        border-radius: 8px;
+        border-width: 0;
+        height: 2rem;
+        font-size: 14px;
+      }
+
+      textarea {
+        height: 6rem !important;
+        width: 100%;
+        padding: 4px;
+        border-radius: 8px;
+        border-width: 0;
+        font-size: 14px;
+      }
+    }
+  }
+
+  &_map {
+    display: flex;
+    flex-direction: column;
+    height: 70vh;
+    background-color: #262838;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-bottom: 2rem;
+
+    iframe {
+      width: 100%;
+      height: 100%;
     }
   }
 }
