--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -7,6 +7,8 @@
   margin-top: 56px;
   background-color: #262838;
   color: #fff;
+  overflow: hidden;
+  height: fit-content;
 }
 .home_intro {
   display: flex;
@@ -93,8 +95,8 @@
   color: #000;
 }
 .home_services_experience_achievement_circle {
-  width: 6rem;
-  height: 6rem;
+  width: 12rem;
+  height: 12rem;
   background: white;
   border-radius: 100%;
   position: relative;
@@ -125,8 +127,8 @@
 .home_feature {
   display: flex;
   flex-direction: column;
-  min-width: 100vh;
-  height: fit-content;
+  min-height: 100vh;
+  height: 200vh;
   background-color: #262838;
   padding-left: 4rem;
   padding-right: 4rem;
