--- a/src/Components/Home/SmoothScroll/SmoothScroll.css
+++ b/src/Components/Home/SmoothScroll/SmoothScroll.css
@@ -1,8 +1,8 @@
 .parent {
+  min-height: 100vh;
+  overflow: hidden;
   position: relative;
   width: 100%;
-  height: 364vh;
-  overflow: hidden;
 }
 
 .scrolling-container {
