--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -57,6 +57,7 @@
       flex-direction: column;
       padding: 2rem;
       justify-content: space-evenly;
+      height: fit-content;
 
       &_left {
         width: 100%;
@@ -88,6 +89,7 @@
       h2 {
         font-size: 2rem;
         text-align: center;
+        margin-bottom: 0.5rem;
       }
     }
 
@@ -135,6 +137,19 @@
           color: #fff;
           font-weight: 500;
           font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        }
+      }
+    }
+    @media screen and (max-width: 1000px) {
+      height: fit-content;
+      &_experience {
+        flex-direction: column;
+        gap: 2rem;
+      }
+      &_title {
+        h2 {
+          font-size: 1.25rem;
+          margin-bottom: 1rem;
         }
       }
     }
@@ -218,6 +233,30 @@
 
         p {
           text-align: justify;
+        }
+      }
+    }
+    @media screen and (max-width: 1000px) {
+      height: fit-content;
+      &_1,
+      &_2,
+      &_3 {
+        flex-direction: column;
+        padding: 0;
+        justify-content: space-evenly;
+        align-items: center;
+        &_left {
+          width: 100%;
+          padding: 0;
+          padding-top: 2rem;
+          padding-bottom: 2rem;
+        }
+
+        &_right {
+          width: 100%;
+          padding: 0;
+          padding-top: 2rem;
+          padding-bottom: 2rem;
         }
       }
     }
@@ -328,6 +367,26 @@
         border-radius: 8px;
         border-width: 0;
         font-size: 14px;
+      }
+    }
+    @media screen and (max-width: 1000px) {
+      flex-direction: column;
+      padding: 2rem;
+      justify-content: space-evenly;
+      height: fit-content;
+
+      &_left {
+        width: 100%;
+        padding: 0;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+      }
+
+      &_right {
+        width: 100%;
+        padding: 0;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
       }
     }
   }
